--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -13,13 +13,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="280dp"
+        android:layout_marginLeft="240dp"
         android:layout_marginBottom="10dp"
         android:shadowColor="@color/black"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="0"
-        android:text="Música"
+        android:text="Bibiloteca"
         android:textColor="@color/white"
         android:textSize="35dp"
         android:textStyle="bold" />
