--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -22,12 +22,13 @@
             app:cardCornerRadius="100dp">
 
             <ImageView
+                android:id="@+id/imgv_camera_ID"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginBottom="50dp"
                 android:background="@color/black"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_baseline_account_circle" />
+                android:src="@drawable/ic_baseline_person" />
         </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
@@ -55,34 +56,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="20dp"
-                    android:text="Nombre de usuario:"
-                    android:textColor="@color/white"
-                    android:textSize="16dp" />
-
-                <ImageView
-                    android:id="@+id/user_name_pencil_ID"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:src="@drawable/ic_baseline_edit" />
-
-            </LinearLayout>
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/ic_baseline_account_circle" />
 
             <TextView
                 android:id="@+id/textV_user_name_ID"
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="20dp"
@@ -90,72 +74,25 @@
                 android:textSize="19dp"
                 android:textStyle="bold" />
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/user_name_pencil_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_edit" />
 
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="20dp"
-                    android:text="Contraseña"
-                    android:textColor="@color/white"
-                    android:textSize="16dp" />
-
-                <ImageView
-                    android:id="@+id/password_pencil_ID"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-
-                    android:src="@drawable/ic_baseline_edit" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/textV_password_ID"
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="20dp"
-                android:textColor="@color/white"
-                android:textSize="19dp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="20dp"
-                    android:text="Correo electrónico:"
-                    android:textColor="@color/white"
-                    android:textSize="16dp" />
-
-
-            </LinearLayout>
+                android:src="@drawable/ic_baseline_email_24" />
 
             <TextView
                 android:id="@+id/textV_email_ID"
@@ -166,6 +103,7 @@
                 android:textColor="@color/white"
                 android:textSize="19dp"
                 android:textStyle="bold" />
+
         </LinearLayout>
 
 
@@ -198,9 +136,17 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp" />
 
+        <TextView
+            android:id="@+id/txtV_log_out_ID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="60dp"
+            android:text="Cerrar sesión"
+            android:textColor="@color/white"
+            android:textSize="17dp" />
 
     </LinearLayout>
-
 
 </RelativeLayout>
 
