--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -19,7 +19,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/ic_baseline_chevron" />
+            android:src="@drawable/ic_baseline_keyboard_arrow_down" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,6 +32,13 @@
             android:textSize="18dp"
             android:textStyle="bold" />
 
+        <ImageView
+            android:id="@+id/imgV_favourited_ID"
+            android:layout_width="27dp"
+            android:layout_height="27dp"
+            android:layout_marginLeft="78dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/ic_baseline_favorite_off" />
 
     </LinearLayout>
 
@@ -73,7 +80,7 @@
     <TextView
         android:id="@+id/txtV_song_ID"
         android:layout_width="match_parent"
-        android:layout_height="26sp"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textColor="@color/white"
         android:textSize="22sp"
@@ -82,7 +89,8 @@
     <TextView
         android:id="@+id/txtV_artista_ID"
         android:layout_width="match_parent"
-        android:layout_height="22sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:gravity="center_horizontal"
         android:textColor="@color/white"
         android:textSize="18sp" />
